data/derived/comb/progs/unify/prog6943.ml.out
Characters 28-56:
  wwhile (fun x -> (b, (f b) = b) ,b);;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
